# notebook_app

./: .gitignore  app.ipynb  module1.ipynb  module2.ipynb
cpp/: CMakeLists.txt  main.cpp
python/: __init__.py  module1.py
python/libgui/: __init__.py
python/libgui/Form/: __init__.py  common.py  form.py
python/libmain/: __init_.py
python/libmain/IO/: file.py
python/libmain/Image/: process.py
